<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:layout_marginBottom="-240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Find Your Next Ride"
            android:fontFamily="@font/text"
            android:textSize="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From:"
                android:fontFamily="@font/text"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="208dp" />

            <AutoCompleteTextView
                android:id="@+id/from_et_get"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:hint=""
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:text="Bar-Ilan University"
                android:textColorHint="@color/LemonChiffon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="255dp" />
            <ImageButton
                android:id="@+id/swap_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-30dp"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/swap" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="To:"
                android:fontFamily="@font/text"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="266dp" />

            <AutoCompleteTextView
                android:id="@+id/to_et_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="50dp"
                android:ems="10"
                android:hint="Hagefen 5 Tel Aviv"
                android:textColor="@color/white"
                android:textColorHint="@color/LemonChiffon"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="198dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick up time:"
                android:fontFamily="@font/text"
                android:textSize="25dp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="327dp" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="81dp"
                android:layout_height="39dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="192dp"
                android:ems="10"
                android:hint="10:20"
                android:textColor="@color/white"
                android:inputType="time"
                android:textColorHint="@color/LemonChiffon"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="323dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="When:"
                android:fontFamily="@font/text"
                android:textSize="25dp"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="414dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/when_group_get"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/today_radio_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Today"
                    android:fontFamily="@font/text"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="452dp" />

                <RadioButton
                    android:id="@+id/tomorrow_radio_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Tomorrow"
                    android:fontFamily="@font/text"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="500dp" />

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/get_optional_rides"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/text"
            android:textSize="22dp"
            android:text="search" />
        <ImageButton
            android:id="@+id/home_from_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/home" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>